# stitch2d_cli

./: .gitignore  README.md  pyproject.toml  run_gui.sh  temp.py  temp2.py  test.sh
examples/: .gitignore  get_data.py
src/stitch2d_cli/: backup.py  cli.py  function.py  fuse.py  fuse_multi.py  gui.py  multi.py  pair.py  utils.py
src/stitch2d_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
