[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stitch2d-cli"
version = "0.1.0"
description = "Thin CLI wrapper around adamancer/stitch2d for microscope tile stitching"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Your Name", email = "you@example.com"}
]
dependencies = [
  "stitching-headless==0.6.1",
  "typer==0.20.0"
]

[project.urls]
Homepage = "https://github.com/yourname/stitch2d-cli"
Source = " https://github.com/OpenStitching/stitching"
Documentation = "https://stitch2d.readthedocs.io/"

[project.scripts]
stitch2d-cli = "stitch2d_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
