[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stitch2d-cli"
version = "0.1.0"
description = "Python library for microscope tile stitching"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Your Name", email = "you@example.com"}
]
dependencies = [
  "typer==0.20.0",
  "scikit-image==0.25.2",
  "opencv-python==4.12.0.88",
  "numpy==2.2.6",
  "tqdm>=4.67.1"
]

[project.urls]
Homepage = "https://github.com/jiwanchung/stitch2d_cli"
Source = " https://github.com/OpenStitching/stitching"
Documentation = "https://stitch2d.readthedocs.io/"

[project.scripts]
stitch2d-cli = "stitch2d_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
